--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
     <header>
-        🚀 Welcome to BALANJU EAPCET  CONSALTENCY 🚀
+        🚀 Welcome to BALANJU EAPCET  CONSULTANCY 🚀
     </header>
 
     <div class="intro">
