--- a/ece.html
+++ b/ece.html
@@ -81,7 +81,17 @@
 
     <h1><marquee scrollamount="15"><font color="GREEN" size="20"><a href="https://youtube.com/@balajimrec227?si=WzyjSDIymR_X-6ai" target="_blank">DO SUBSCRIBE OUR CHANNEL "BALANJU MREC"</a></font></marquee></h1>
 <div style="text-align: center; margin-top: 50px;">
-    <a href="eee.html" style="text-decoration: none; margin: 10px;">
+   
+<!-- Counseling Promo -->
+    <div style="background-color: #fff3cd; padding: 20px; border-radius: 10px; text-align: center; margin: 30px auto;">
+        <h2>📌 Need Help with EAMCET Counseling?</h2>
+        <p style="font-size: 18px;">Confused about choosing the right branch? Book our 1-on-1 **paid counseling** session for expert guidance. We'll help you make the smartest choice!</p>
+        <a href="your-paid-counseling-link.html" target="_blank">
+            <button style="padding: 10px 20px; background-color: #ff9800; color: white; font-size: 16px; border: none; border-radius: 8px;">💬 Get Counseling Help</button>
+        </a>
+    </div>
+
+     <a href="CYBER.html" style="text-decoration: none; margin: 10px;">
         <button style="padding: 10px 25px; font-size: 18px; border-radius: 10px; background-color: #4caf50; color: white; border: none;">➡️ Next Branch</button>
     </a>
     
@@ -90,6 +100,7 @@
     </a>
 </div>
 
+    
 </body>
 </html>
 
