--- a/mainindex.html
+++ b/mainindex.html
@@ -58,7 +58,7 @@
   <div class="subtitle">Your Complete Guide for Educational Choices</div>
 
   <div class="menu">
-    <a href="engineering.html">🎓 Engineering</a>
+    <a href="http://127.0.0.1:5500/index01.html">🎓 Engineering</a>
     <a href="#">📘 Degree </a>
     <a href="#">📘  Pharma</a>
     <a href="#"> 🏫 Intermediate</a>
