--- a/index.html
+++ b/index.html
@@ -921,9 +921,9 @@
 </section>
 
 <section id="connect" style="background-color: #f1f8e9; padding: 50px 20px; border-radius: 12px; margin-top: 60px; text-align: center; font-family: 'Segoe UI', sans-serif;">
-  <h2 style="color: #33691e; font-size: 32px; margin-bottom: 20px;">Stay Connected with CBIT</h2>
+  <h2 style="color: #33691e; font-size: 32px; margin-bottom: 20px;">Stay Connected with MVSR</h2>
   <p style="font-size: 18px; max-width: 800px; margin: 0 auto 20px; color: #424242;">
-    Your CBIT journey goes beyond the website. Stay in the loop with <strong>real-time campus updates, placement highlights, student stories, and event insights</strong> by following us on our official platforms.
+    Your MVSR journey goes beyond the website. Stay in the loop with <strong>real-time campus updates, placement highlights, student stories, and event insights</strong> by following us on our official platforms.
   </p>
   <p style="font-size: 16px; color: #558b2f; margin-bottom: 30px;">
     🎯 Don’t just explore — become a part of our vibrant online community.
